// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes can handle css vendor prefixes 1`] = `
<i>
  prefix
</i>
`;

exports[`attributes correctly convert multiple style values 1`] = `
<ul
  style="margin: 0px auto; padding: 0px 10px;"
/>
`;

exports[`attributes correctly convert multiple style values 2`] = `
<span
  style="font-size: 12px;"
/>
`;

exports[`attributes correctly convert multiple style values 3`] = `
<div
  style="background-image: url(https://d1nabgopwop1kh.cloudfront.net/xx);"
/>
`;

exports[`attributes correctly map HTML attributes to react props 1`] = `
<label
  class="input-text"
  for="name"
/>
`;

exports[`attributes correctly map HTML attributes to react props 2`] = `
<div
  aria-describedby="info"
  contenteditable="true"
  data-type="calendar"
  id="test"
  spellcheck="true"
/>
`;

exports[`attributes correctly map HTML attributes to react props 3`] = `
<link
  xlink:actuate="other"
  xml:lang="en"
/>
`;

exports[`attributes correctly map HTML attributes to react props 4`] = `
<svg
  color-interpolation-filters="sRGB"
  fill-rule="evenodd"
  viewBox="0 0 24 24"
>
  <path
    fill="#ffa0"
  />
</svg>
`;

exports[`attributes correctly map HTML attributes to react props 5`] = `
<img
  crossorigin="true"
  srcset="https://img.src"
/>
`;

exports[`attributes correctly map HTML attributes to react props 6`] = `
<iframe
  allowfullscreen=""
  srcdoc="<p>html</p>"
/>
`;

exports[`attributes correctly map HTML attributes to react props 7`] = `
<input
  autocomplete="on"
  maxlength="10"
  readonly=""
/>
`;

exports[`attributes correctly map HTML attributes to react props 8`] = `
<button
  accesskey="s"
>
  Stress reliever
</button>
`;

exports[`attributes correctly map HTML attributes to react props 9`] = `
<time
  datetime="2018-07-07"
>
  July 7
</time>
`;

exports[`attributes correctly map HTML attributes to react props 10`] = `
<img
  alt="alt"
  class=""
/>
`;

exports[`attributes correctly map HTML attributes to react props 11`] = `
<div
  itemscope=""
  itemtype="https://schema.org/Movie"
>
  
  
  <h1
    itemprop="name"
  >
    Avatar
  </h1>
  

</div>
`;

exports[`attributes decode HTML entities inside style declaration 1`] = `
<em
  style="font-family: Consolas, \\"Liberation Mono \\";"
/>
`;

exports[`attributes handle CSS custom properties correctly 1`] = `
<div
  style="--color: red;"
>
  Explore Categories
</div>
`;

exports[`attributes handle CSS custom properties correctly 2`] = `
<div
  style="--color: var(--syntax-text);"
>
  Explore Categories
</div>
`;

exports[`attributes ignore invalid style 1`] = `
<div>
  Explore Categories
</div>
`;

exports[`attributes ignore invalid style 2`] = `
<div>
  Explore Categories
</div>
`;

exports[`core can render element inside text node 1`] = `what are `;

exports[`core can render self closing component 1`] = `
<img
  src="https://www.google.com/logo.png"
/>
`;

exports[`core can render self closing component 2`] = `<hr />`;

exports[`core can render self closing component 3`] = `<br />`;

exports[`core can render sibling element as multiple children 1`] = `
<p>
  Multi
</p>
`;

exports[`core ignore comment 1`] = `
<div>
  no comment
</div>
`;

exports[`core ignore multiline comment 1`] = `
<li>
  no multiline comment
</li>
`;

exports[`core it works 1`] = `
<p>
  This is cool
</p>
`;

exports[`encoding dangerously rendered script tag is not encoded 1`] = `
<script
  data-cfasync="false"
  type="application/json"
>
  {
          "key": "value"
        }
</script>
`;

exports[`encoding decode html attributes 1`] = `
<a
  href="https://www.google.com/?a=b&c=d"
>
  test
</a>
`;

exports[`encoding decode html entities on defaultMap 1`] = `
<p>
  & and &
</p>
`;

exports[`encoding unescape html entities 1`] = `
<blockquote
  class="entities"
>
  & and &
</blockquote>
`;

exports[`options dangerouslySetChildren dangerously render empty script tag 1`] = `
<script
  type="text/javascript"
/>
`;

exports[`options dangerouslySetChildren no dangerously render script tag 1`] = `
<script
  data-cfasync="false"
  type="text/javascript"
>
  
  var gtm4wp_datalayer_name = 'dataLayer';
  var dataLayer = dataLayer || [];
  dataLayer.push({
    pagePostType: 'post',
    pagePostType2: 'single-post',
    pageCategory: ['kalender-cuti'],
    pagePostAuthor: 'Candra Alif Irawan',
  });

</script>
`;

exports[`options dangerouslySetChildren preserve the content of style tag by default 1`] = `
<style>
  ul &gt; li {list-style: none}div[data-id="test"]:not(.y) {display: none;}
</style>
`;

exports[`options dangerouslySetChildren should dangerously set html for required tags 1`] = `
<pre>
  &lt;a href="/"&gt;Test&lt;/a&gt;
</pre>
`;

exports[`options preserveAttributes allow preserve some attributes 1`] = `
<div
  ng-if="x"
>
  
  
  <div
    tv-abc="d"
    tv-xxx="y"
  />
  

</div>
`;

exports[`options transform custom component 1`] = `
<section
  class="css-x243s"
  data-custom="true"
>
  <h2>
    Recommended
  </h2>
  Custom component
</section>
`;

exports[`options transform default mapping 1`] = `
<div>
  <div>
    <span>
      Default mapping
    </span>
  </div>
</div>
`;

exports[`whitespace allow newline only text node between elements 1`] = `
<pre>
  <span>
    Hello
  </span>
  

  <span>
    World
  </span>
</pre>
`;

exports[`whitespace allow whitespace only text nodes between elements 1`] = `
<span>
  Hello
</span>
`;

exports[`whitespace remove whitespace on table elements 1`] = `
<table>
  <tbody>
    <tr>
      <th>
        title
      </th>
    </tr>
    <tr>
      <td>
        entry
      </td>
    </tr>
  </tbody>
</table>
`;
